Added some content, designs need work

--- a/index.html
+++ b/index.html
@@ -17,8 +17,50 @@
         </div>
     </header>
     <main>
-        <section class="topSection">
+        <section class="contentSection">
+            <div>
+                <img src="./Assets/iconCropped.png" alt="Logo" class="logo">
+            </div>
+            <div class="aboutHoloLab">
+                🦊 About HoloLab
+                A Creative Studio by One Person With Big Ideas
 
+                Hey there! I'm the one behind HoloLab — a creative studio born from a love of storytelling, stylized visuals, and just a bit of fox magic. Whether it's crafting 3D game assets, building immersive animations, editing sharp video content, or customizing websites with WordPress, I bring ideas to life with a personal touch.
+                I specialize in:
+                🎮 Game Asset Development (Blender + Unity)
+                ✨ 3D Animation and motion graphics (After Effects)
+                🧠 Creative Video Editing (Premiere Pro)
+                🌐 Custom WordPress Websites (Wordpress)
+                🎥 Streaming & content creation (Twitch + OBS)
+                What sets me apart? Every project gets the same care as if it were my own — with strong attention to detail, a love for expressive design, and a commitment to making things that feel alive.
+                Why the fox?
+
+                Holo, the studio mascot, represents curiosity, cleverness, and a hint of playful rebellion — all qualities I aim to bring to my work. Plus, those tails? Always moving forward.
+            </div>
+        </section>
+        <hr/>
+        <section class="contentSection">
+            <div class="contentSectionItem aboutMe">
+            Welcome to HoloLab. I’m Justin — and it’s just me here.
+
+            Hey, I’m Justin. I’m the creator and sole employee of HoloLab, a one-person creative studio where imagination, tech, and passion collide.
+
+            I wear all the hats — 3D artist, animator, editor, developer, and sometimes even mascot. I built HoloLab as a space to do what I love: bring stories and ideas to life through visual content, interactive experiences, and motion.
+
+            What I do here:
+            🛠 3D Modeling & Animation – From custom characters to stylized environments (Blender + Unity)
+            🎮 Game Asset Design – Rigged, ready, and optimized for Unity game projects (Blender)
+            🎥 Video Editing & Animation – Music videos, stream intros, and animated content (Premiere Pro + After Effects)
+            🌐 WordPress & Web Projects – Simple, clean, custom sites built with visual flair (Wordpress)
+            🎙 Content Creation – Twitch, YouTube, and behind-the-scenes creative process (Twitch + OBS)
+
+            Why HoloLab
+            The name’s inspired by creativity, curiosity, and a touch of fantasy — traits I channel through every project. Holo, the fox mascot, represents that playful and clever energy that drives my work (and yeah, the tails wag).
+            Whether you're here to hire me or just vibing with the fox, thanks for stopping by. Let’s build something cool.
+            </div>
+            <div class="contentSectionItem">
+                <img src="./Assets/selfie.jpg" alt="Selfie" class="selfie">
+            </div>
         </section>
     </main>
     <footer>
